# slumlords

./: .gitignore  .pnp.js  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
apps/account/: urls.py  views.py
apps/account/static/js/: bundle.js
apps/home/: apps.py  views.py
apps/map/: apps.py  urls.py
apps/review/: apps.py
apps/review/urls/: client.py
slumlords/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
slumlords/account/: apps.py  urls.py  views.py
slumlords/api/: apps.py
slumlords/apps/account/: apps.py  urls.py  views.py
slumlords/apps/home/: apps.py  views.py
slumlords/apps/map/: apps.py  urls.py  views.py
slumlords/apps/reading/: apps.py
slumlords/apps/review/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
slumlords/apps/reviews/: admin.py  forms.py  models.py  signals.py  views.py
slumlords/apps/shared/: apps.py
slumlords/apps/support/: apps.py
slumlords/apps/wall_of_shame/: apps.py
slumlords/home/: apps.py  views.py
slumlords/map/: apps.py  urls.py  views.py
slumlords/review/: admin.py  apps.py
slumlords/review/migrations/: 0003_review_tenent.py  0004_auto_20210314_0016.py  0005_auto_20210314_0024.py
slumlords/review/urls/: client.py
slumlords/settings/: main.py
slumlords/shared/: apps.py
slumlords/slumlords/settings/: local.py
slumlords/static-src/js/: main.js
slumlords/static/css/: map.css  reviews.css
slumlords/static/js/: bundle.js  bundle.js.map
slumlords/wall_of_shame/: apps.py
(+82 files in other folders)
