[tool.poetry]
name = "slumlords.london"
version = "0.1.0"
description = ""
authors = ["phil-bell <philhabell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "django-rest-framework"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
